--- a/src/style.css
+++ b/src/style.css
@@ -4,9 +4,10 @@
 
 body {
   background-color: #f8f9fa;
+  font-size: 16px;
 }
 
-.title {
+/* .title {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
@@ -70,17 +71,80 @@ h2.title {
   flex-direction: column;
   justify-content: space-evenly;
 
-  /* align-items: center; */
-}
-
+  /* align-items: center; 
+}*/
+/* 
 .result-item-container h3 {
   color: green;
   padding: 2px;
   margin: 5px;
   background-color: #f6d365;
+} */
+
+/* #map {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40vw;
+  height: 100vh;  
+}  */
+
+.parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
-#map {
-  width: 300px;
-  height: 400px;
+.div1 {
+  background-color: #f6d365;
+  top: 0;
+  left: 0;
+  width: 60vw;
+  height: 25vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.div1 > h4 {
+  font-size: 1.5em;
+  margin: 0;
+}
+.div1 > h2 {
+  font-size: 2em;
+  margin-top: 0;
+}
+
+.div2 {
+  background-color: aqua;
+  width: 60vw;
+  height: 15vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.div2 > form {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.div3 {
+  background-color: #fda085;
+  width: 60vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.div4 {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 40vw;
+  height: 100vh;
 }
