--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,132 @@ body {
   font-size: 16px;
 }
 
+.parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.except-map {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  width: 53vw;
+}
+
+.div1 {
+  background-color: #f6d365;
+  background-image: url("./header-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  color: black;
+  width: 100%;
+  height: 300px;
+}
+
+.header-text {
+  display: flex;
+  border: solid #1a1919 0.3rem;
+  background-color: #e9e7e7;
+  padding: 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.7em;
+  font-weight: bold;
+  color: #1a1919;
+  box-shadow: 12px 12px 2px 1px rgba(83, 83, 87, 0.233);
+}
+
+.header-text > h1 {
+  margin: 0;
+  font-size: 1em;
+}
+
+.container {
+  margin-bottom: 1rem;
+}
+
+.div2 {
+  background-color: #ecf0f1;
+  width: 100%;
+  height: 120px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid #ced6e0;
+}
+
+.div2 > form {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.div3 {
+  background-color: #bcaaa4;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 6px 23px;
+}
+
+.result-container {
+  background-color: #ffe8cc;
+}
+
+.result-item-container {
+  margin: 10px 10px;
+  padding: 5px 8px;
+  font-size: 15px;
+  min-height: 130px;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.result-item-container h3 {
+  color: #3d3d3d;
+  min-width: 350px;
+  text-align: center;
+  font-size: 1.4em;
+}
+
+.result-info {
+  font-size: 0.9em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+.div4 {
+  position: fixed;
+  top: 8px;
+  right: 0;
+  width: 45%;
+  height: 100vh;
+}
+
+.onmap {
+  font-family: inherit;
+  font-weight: bold;
+  text-align: center;
+  padding: 10px;
+  min-width: 250px;
+}
+
 /* .title {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
@@ -57,29 +183,7 @@ h2.title {
   cursor: pointer;
 }
 
-.result-container {
-  background-color: #ffe8cc;
-  margin-top: 10px;
-}
 
-.result-item-container {
-  margin: 10px 10px;
-  padding: 5px 8px;
-  font-size: 15px;
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-
-  /* align-items: center; 
-}*/
-/* 
-.result-item-container h3 {
-  color: green;
-  padding: 2px;
-  margin: 5px;
-  background-color: #f6d365;
-} */
 
 /* #map {
   position: absolute;
@@ -88,64 +192,3 @@ h2.title {
   width: 40vw;
   height: 100vh;  
 }  */
-
-.parent {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.div1 {
-  background-color: #f6d365;
-  top: 0;
-  left: 0;
-  width: 60vw;
-  height: 25vh;
-  margin: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.div1 > h4 {
-  font-size: 1.5em;
-  margin: 0;
-}
-.div1 > h2 {
-  font-size: 2em;
-  margin-top: 0;
-}
-
-.div2 {
-  background-color: aqua;
-  width: 60vw;
-  height: 15vh;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.div2 > form {
-  width: 80%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.div3 {
-  background-color: #fda085;
-  width: 60vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.div4 {
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 40vw;
-  height: 100vh;
-}
