--- a/src/style.css
+++ b/src/style.css
@@ -5,25 +5,19 @@
 body {
   background-color: #f8f9fa;
   font-size: 16px;
+  display: flex;
+  justify-content: center;
 }
 
 .parent {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  width: 1100px;
 }
 
-.except-map {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  left: 0;
-  width: 53vw;
-}
-
-.div1 {
-  background-color: #f6d365;
+.header {
+  background-color: #bcaaa4;
   background-image: url("./header-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -35,8 +29,8 @@ body {
   align-items: center;
 
   color: black;
-  width: 100%;
-  height: 300px;
+  width: 70%;
+  height: 280px;
 }
 
 .header-text {
@@ -47,7 +41,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 2.7em;
+  font-size: 1.7em;
   font-weight: bold;
   color: #1a1919;
   box-shadow: 12px 12px 2px 1px rgba(83, 83, 87, 0.233);
@@ -55,34 +49,30 @@ body {
 
 .header-text > h1 {
   margin: 0;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
-.container {
-  margin-bottom: 1rem;
-}
-
-.div2 {
+.search {
   background-color: #ecf0f1;
-  width: 100%;
-  height: 120px;
+  width: 30%;
+  height: 280px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   border: 1px solid #ced6e0;
 }
 
-.div2 > form {
-  width: 80%;
+.form-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
+  flex-flow: column nowrap;
+  height: 80%;
   align-items: center;
-  flex-wrap: wrap;
 }
 
-.div3 {
+.list {
   background-color: #bcaaa4;
-  width: 100%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   padding: 6px 23px;
@@ -96,7 +86,7 @@ body {
   margin: 10px 10px;
   padding: 5px 8px;
   font-size: 15px;
-  min-height: 130px;
+  min-height: 150px;
   background-color: #f5f5f5;
   display: flex;
   flex-direction: row;
@@ -105,9 +95,13 @@ body {
 }
 .result-item-container h3 {
   color: #3d3d3d;
-  min-width: 350px;
+  min-width: 280px;
   text-align: center;
-  font-size: 1.4em;
+  font-size: 1.2em;
+}
+
+.result-item-container h3:hover {
+  cursor: pointer;
 }
 
 .result-info {
@@ -115,14 +109,12 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  margin-right: 5px;
 }
 
-.div4 {
-  position: fixed;
-  top: 8px;
-  right: 0;
-  width: 45%;
-  height: 100vh;
+.map {
+  width: 30%;
+  height: 70vh;
 }
 
 .onmap {
@@ -133,62 +125,18 @@ body {
   min-width: 250px;
 }
 
-/* .title {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-}
-
-h4.title {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-h2.title {
-  margin-top: 0;
-  font-size: 30px;
-}
-
-.form-container {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  width: 300px;
-  height: 280px;
-  border-radius: 12px;
-}
-
-.form-label {
-  font-size: 13px;
-  color: white;
-}
-
-.form-container select {
-  width: 130px;
-  height: 25px;
-  margin-top: 3px;
-  display: block;
-}
-
-.form-container button {
-  width: 130px;
-  height: 28px;
-  margin: 18px 0;
-  background-color: hsl(0, 0%, 95%);
-  border: none;
-  border-radius: 5px;
-}
-
-.form-container button:hover {
-  background-color: hsl(0, 0%, 79%);
+.scroll-top-btn {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
   cursor: pointer;
+  background-color: rgb(133, 132, 132, 0.3);
+
+  border-radius: 10px;
 }
 
-
-
-/* #map {
-  position: absolute;
+.map-scroll {
+  width: 30%;
+  height: 100vh;
   top: 0;
-  right: 0;
-  width: 40vw;
-  height: 100vh;  
-}  */
+}
