--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -162,7 +162,10 @@ header h2 {
 }
 
 .map {
-  height: 93.5vh;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -1;
 }
 
 .onmap {
